# Studies

./: .gitignore  Pipfile
Actix-web/: Cargo.toml
Actix-web/01-just-the-server/: Cargo.toml
Actix-web/01-just-the-server/src/: main.rs
Actix-web/02-route-with-Responder/: Cargo.toml
Actix-web/04-state/: Cargo.toml
Actix-web/04-state/src/: main.rs
Actix-web/src/: 02_route_with_responder.rs  03_scope.rs
__books/Practical_Rust_Web_Projects/02-catdex/: Cargo.toml  docker-compose.yml
__books/Practical_Rust_Web_Projects/02-catdex/src/: main.rs  models.rs
__books/Practical_Rust_Web_Projects/02-catdex/static/: add.html  index.html
__books/Practical_Rust_Web_Projects/03-catdex-api/: .env  Cargo.toml  docker-compose.yml
__books/Practical_Rust_Web_Projects/03-catdex-api/src/: main.rs
__books/Practical_Rust_Web_Projects/03-catdex-api/static/: index.html
__books/Rust_Web_Programming/ch04/01_todo_web_app/: Cargo.toml  thunder-collection_todo_web_app.json
__books/Rust_Web_Programming/ch04/01_todo_web_app/javascript/: main.js
__books/Rust_Web_Programming/ch04/01_todo_web_app/src/: main.rs  processes.rs  state.rs
__books/Rust_Web_Programming/ch04/01_todo_web_app/src/json_serialization/: to_do_items.rs
__books/Rust_Web_Programming/ch04/01_todo_web_app/src/to_do/structs/: pending.rs
__books/Rust_Web_Programming/ch04/01_todo_web_app/src/views/: mod.rs  token.rs
__books/Rust_Web_Programming/ch04/01_todo_web_app/templates/: main.html
__books/Rust_Web_Programming/ch04/01_todo_web_app/thunder-tests/: thunderActivity.json  thunderclient.json
__books/Rust_Web_Programming/web_app/: .env  Cargo.toml  docker-compose.yml  requests.http  wait_for_database.sh
__books/Rust_Web_Programming/web_app/_react-frontend/front_end/: package-lock.json
__books/Rust_Web_Programming/web_app/_react-frontend/front_end/src/: App.js
__books/Rust_Web_Programming/web_app/css/: base.css
__books/Rust_Web_Programming/web_app/javascript/: main.js
__books/Rust_Web_Programming/web_app/src/: database.rs  jwt.rs  main.rs  processes.rs  state.rs
__books/Rust_Web_Programming/web_app/src/json_serialization/: to_do_item.rs  to_do_items.rs
__books/Rust_Web_Programming/web_app/src/models/item/: item.rs  mod.rs  new_item.rs
__books/Rust_Web_Programming/web_app/src/to_do/: enums.rs
__books/Rust_Web_Programming/web_app/src/to_do/structs/: pending.rs
__books/Rust_Web_Programming/web_app/src/to_do/traits/: create.rs  edit.rs
__books/Rust_Web_Programming/web_app/src/views/: mod.rs
__books/Rust_Web_Programming/web_app/src/views/app/: content_loader.rs  items.rs  mod.rs
__books/Rust_Web_Programming/web_app/src/views/auth/: login.rs  logout.rs
__books/Rust_Web_Programming/web_app/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
__books/Rust_Web_Programming/web_app/templates/: main.html
__books/Rust_Web_Programming/web_app/templates/components/: header.html
_old/__books/Rust_Web_Programming/web_app/: .env  Cargo.toml  wait_for_database.sh
_old/__books/Rust_Web_Programming/web_app/css/: main.css
_old/__books/Rust_Web_Programming/web_app/javascript/: main.js
_old/__books/Rust_Web_Programming/web_app/src/to_do/: enums.rs
(+304 files in other folders)
