[package]
name = "just_the_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

[[bin]]
name = "01_just_the_server"
path = "src/01_just_the_server.rs"

[[bin]]
name = "02_route_with_responder"
path = "src/02_route_with_responder.rs"

[[bin]]
name = "03_scope"
path = "src/03_scope.rs"

[[bin]]
name = "04_state"
path = "src/04_state.rs"
