[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
handlebars = { version = "4.3.3", features = ["dir_source"] }
serde_json = "1.0.82"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
