[package]
name = "catdex_api"
version = "2022.8.3"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
diesel = { verson = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
