[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4.3.1"
chrono = "0.4.24"
diesel = { version = "2.1.0", features = ["r2d2", "postgres", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# futures = "0.3.28"
